--- a/login.html
+++ b/login.html
@@ -203,7 +203,8 @@
   const setPasswordInput = document.getElementById("setPasswordInput");
   const savePasswordBtn = document.getElementById("savePasswordBtn");
 
-  const targetPage = "mobile/1-Home/home.html";
+  const baseUrl = window.location.origin;
+  const targetPage = `${baseUrl}/mobile/1-Home/home.html`;
 
 
  // Check with the server if the admin password is already set
