register redirect to AdminSelection #6 / .register .login .server

--- a/login.html
+++ b/login.html
@@ -203,8 +203,7 @@
   const setPasswordInput = document.getElementById("setPasswordInput");
   const savePasswordBtn = document.getElementById("savePasswordBtn");
 
-  const baseUrl = window.location.origin;
-  const targetPage = `${baseUrl}/mobile/1-Home/home.html`;
+  window.location.href = "/mobile/1-Home/home.html";
 
 
  // Check with the server if the admin password is already set
